--- a/static/less/stream.less
+++ b/static/less/stream.less
@@ -44,11 +44,6 @@
     }
 }
 
-.wall-entry-controls {
-    /* Important since 1.2 */
-    display:inline-block;
-}
-
 .wall-entry-controls,
 .wall-entry-controls a {
     font-size: 11px;
